--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
   <title>Mahcine Learning-based Hypertension Prediction</title>
-  <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="static/images/KakaoTalk_20230704_223321247_02.jpg">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
 
@@ -52,7 +52,7 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">Mahcine Learning-based Hypertension Prediction</h1>
+            <h1 class="title is-1 publication-title">Medical Learning-based Hypertension Prediction</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
