--- a/index.html
+++ b/index.html
@@ -379,8 +379,8 @@
         <h2 class="title is-3">Reference</h2>
         <div class="content has-text-justified">
           <p>
-            [1] abc, "Research on Hypertension", abc, 2024. <br>
-            [2] abc, "Research on Hypertension", abc, 2024.
+            [1] 용왕식, 박일수, 강성홍, 김원중, 김공현, 김광기, 박노례. (2006). 고혈압 발생 예측 모형 개발. 보건교육건강증진학회지, 23(4), 13-28. <br>
+            [2] 이종원, 정인철, 김갑열, 조진수. (2021). 신경망 알고리즘을 활용한 고혈압 수치 예측 모델 연구. 2021 한국차세대컴퓨팅학회 춘계학술대회, 356-358.
           </p>
         </div>
       </div>
